# cookiecutter-data-science

./: ccds.json  pyproject.toml
ccds/: __main__.py
ccds/hook_utils/: dependencies.py
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .gitlab-ci.yaml  .pre-commit-config.yaml  Makefile  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: build.yml  greetings.yml  release-drafter.yml  security.yml
{{ cookiecutter.repo_name }}/test/: test_install.py
