[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}"License :: OSI Approved :: BSD License"{% endif %}
]
requires-python = "~={{ cookiecutter.python_version_number }}"

dependencies = [

]

[project.optional-dependencies]
dev = [

]

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 120
color = true


[tool.ruff.lint.isort]
known_first_party = ["{{ cookiecutter.module_name }}"]
force_sort_within_sections = true
line_length = 120

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
exclude = ["build/"]
pretty = true
show_traceback = true
color_output = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.paths]
source = ["{{ cookiecutter.module_name }}"]

[tool.coverage.report]
fail_under = 10
show_missing = true
